ok so actually fixed the event spilling into footer

--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,6 @@ padding: 0px;
 .eventList {
   padding-bottom: 100px;
 }
+.rightmain {
+  padding-bottom: 100px;
+}
